      - pages -> page_count
      - importPageIntoForm -> embed_page
      - isEncrypted -> is_encrypted
      - xmpMetadata -> xml_metadata
      - outlines -> outline

    - Merged saveas into save.

    - Added individual accessors for PDF metadata (title, author, producer,
      etc.).  Replaced info and infoMetaAttributes with info_metadata for custom
      metadata.

    - Added $page->boundaries() and $pdf->default_page_boundaries() to replace
      the separate methods for the various page boundaries.  The supported
      arguments are slightly different; some edge cases have been removed and
      new options have been added.  See below and the PDF::API2::Page
      documentation for details.

    - Added $page->size() and $pdf->default_page_size() as a shortcut for
      setting the media box.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept "WxH" page sizes in inches (e.g. 11x17 or 8.5x11).
      This does not apply to the deprecated versions of these methods.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept a single number for page boundaries other than the
      media box, representing an amount in points to shrink the next larger box.
      This does not apply to the deprecated versions of these methods.

    - Replaced pageLabel with page_labels.  The option syntax is slightly
      different (pass options as a hash instead of a hashref; remove hyphens
      from option names).

    - Replaced image_jpeg, image_tiff, image_pnm, image_png, image_gif, and
      image_gd with $pdf->image.

    - Replaced the individual barcode methods with $pdf->barcode, which is
      fully documented and includes reasonable defaults based on the chosen
      barcode format.

    - Improved spacing between barcodes and labels when both bar_extend
      (formerly -lmzn) and font_size (formerly -fnsz) are set and the font size